--- a/index.html
+++ b/index.html
@@ -14,10 +14,15 @@
     <section class="main-section">
         <h1 class="title">Palindrome Checker<img class="toggle-mode" src="images/moon.png" alt="dark-mode-img"></h1>
         
-        <label for="user-text">Enter a string: </label>
-        <input type="text" name="user-text" class="user-text">
+        <div>
+            <form>
+                <label for="user-text">Enter a string: </label>
+                <input type="text" name="user-text" class="user-text">
 
-        <p class="result-text"></p>
+                <p class="result-text"></p>            
+            </form>
+        </div>
+        
     </section>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
